--- a/.travis.yml
+++ b/.travis.yml
@@ -8,10 +8,13 @@ deploy:
    on:
      branch: master
 
-# language: python
-#   python:
-# - "3.7"
-#
-#   cache: pip
-#   install:
-#   - pip install -r requirements.txt
+language: python
+python:
+   - "3.7"
+
+cache: pip
+install:
+   - pip install -r requirements.txt
+
+# script:
+#    -
