--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
-deploy:
-   provider: pages
-   skip-cleanup: true
-   github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-   keep-history: true
-   on:
-     branch: master
+# deploy:
+#    provider: pages
+#    skip-cleanup: true
+#    github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
+#    keep-history: true
+#    on:
+#      branch: master
 
 language: python
 python:
