--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,7 @@
-# deploy:
-#    provider: pages
-#    skip-cleanup: true
-#    github-token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
-#    keep-history: true
-#    on:
-#      branch: master
-
 language: python
 python:
-   - "3.6"
-   # - "3.7-dev"  # 3.7 development branch
+   # - "3.6"
+   - "3.7-dev"  # 3.7 development branch
 
 cache: pip
 install:
