--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
-# os: osx
-
 language: python
+env:
+  - MOZ_HEADLESS=1
+addons:
+  firefox: latest
 python:
    - "3.6"
 
-env:
-  - MOZ_HEADLESS=1
-
-addons:
-  firefox: latest
+before_install:
+  - wget https://github.com/mozilla/geckodriver/releases/download/v0.22.0/geckodriver-v0.22.0-linux64.tar.gz
+  - mkdir geckodriver
+  - tar -xzf geckodriver-v0.22.0-linux64.tar.gz -C geckodriver
+  - export PATH=$PATH:$PWD/geckodriver
 
 cache: pip
 install:
