--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ env:
   - MOZ_HEADLESS=1
 addons:
   firefox: latest
-  chrome: stable
+  # chrome: stable
 
 python:
    - "3.6"
@@ -16,11 +16,12 @@ before_install:
   - tar -xzf geckodriver-v0.22.0-linux64.tar.gz -C geckodriver
   - export PATH=$PATH:$PWD/geckodriver
 
-  - wget http://chromedriver.storage.googleapis.com/2.42/chromedriver_linux64.zip
-  - mkdir chromedriver
-  - unzip chromedriver_linux64.zip -d chromedriver
-  - export PATH=$PATH:$PWD/chromedriver
-  - google-chrome-stable --headless --disable-gpu
+  # TODO Chrome browser config
+  # - wget http://chromedriver.storage.googleapis.com/2.42/chromedriver_linux64.zip
+  # - mkdir chromedriver
+  # - unzip chromedriver_linux64.zip -d chromedriver
+  # - export PATH=$PATH:$PWD/chromedriver
+  # - google-chrome-stable --headless --disable-gpu
 
 install:
    - pip install -r requirements.txt
