--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,9 @@ before_install:
 
 install:
    - pip install -r requirements.txt
+   - pip install flake8
 
 script:
     - behave
 #     - behave -D browser=Chrome
+    - flake8 . --exit-zero
