--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -16,6 +16,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - uses: browser-actions/setup-firefox@latest
+    - run: firefox --version
     - uses: browser-actions/setup-geckodriver@latest
     - run: geckodriver --version
     - name: Set up Python 3.7
