--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -39,4 +39,10 @@ jobs:
       env: 
         MOZ_HEADLESS: 1
       run: |
-        behave
+        behave --junit
+        ls -R
+    # - uses: actions/upload-artifact@v2  # upload test results
+      # if: success() || failure()        # run this step even if previous step failed
+      # with:
+      #   name: test-results
+      #   path: jest-junit.xml
