--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,7 @@
 # This workflow will install Python dependencies, run tests and lint with a single version of Python
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-python-with-github-actions
 
-name: Python Selenium behave testing
+name: 'Python Selenium behave testing'
 
 on:
   push:
@@ -10,7 +10,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  test:
 
     runs-on: ubuntu-latest
 
@@ -40,9 +40,9 @@ jobs:
         MOZ_HEADLESS: 1
       run: |
         behave --junit
-        ls -R
-    # - uses: actions/upload-artifact@v2  # upload test results
-      # if: success() || failure()        # run this step even if previous step failed
-      # with:
-      #   name: test-results
-      #   path: jest-junit.xml
+        
+    - uses: actions/upload-artifact@v2  # upload test results
+      if: success() || failure()        # run this step even if previous step failed
+      with:
+        name: test-results
+        path: reports/*.xml
