--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,13 +15,11 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2 
     
-    - name: Install Firefox browser 
     - uses: browser-actions/setup-firefox@latest
     - run: firefox --version
     
-    - name: Install geckodriver
     - uses: browser-actions/setup-geckodriver@latest
     - run: geckodriver --version
     
@@ -49,8 +47,7 @@ jobs:
       run: |
         behave --junit
     
-    - name: Upload test results
-      uses: actions/upload-artifact@v2
+    - uses: actions/upload-artifact@v2
       if: success() || failure()        # run this step even if previous step failed
       with:
         name: test-results
