--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,39 +10,46 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  build-test:
 
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v2 
+    
     - uses: browser-actions/setup-firefox@latest
     - run: firefox --version
+    
     - uses: browser-actions/setup-geckodriver@latest
     - run: geckodriver --version
+    
     - name: Set up Python 3.7
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
+    
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
         flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
         # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
         flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    
     - name: Test with behave
       env: 
         MOZ_HEADLESS: 1
       run: |
         behave --junit
-        ls -R
-    # - uses: actions/upload-artifact@v2  # upload test results
-      # if: success() || failure()        # run this step even if previous step failed
-      # with:
-      #   name: test-results
-      #   path: jest-junit.xml
+    
+    - uses: actions/upload-artifact@v2
+      if: success() || failure()        # run this step even if previous step failed
+      with:
+        name: test-results
+        path: reports/*.xml
+        retention-days: 7
