--- a/.github/workflows/test-report.yml
+++ b/.github/workflows/test-report.yml
@@ -12,6 +12,6 @@ jobs:
     - uses: dorny/test-reporter@v1
       with:
         artifact: test-results            # artifact name
-        name: Behave Tests                # Name of the check run which will be created
+        name: Behave Test Report          # Name of the check run which will be created
         path: '*.xml'                     # Path to test results (inside artifact .zip)
         reporter: java-junit              # Format of test results
